--- a/app/views/organizations/_organization.html.erb
+++ b/app/views/organizations/_organization.html.erb
@@ -1,5 +1,6 @@
 <%= link_to organization_dashboard_path(organization), class: "border p-4 rounded-lg flex items-center justify-between gap-2 hover:bg-gray-100" do %>
   <div class="flex items-center gap-2">
+    <%= subscription_status_label(organization) %>
     <%= organization_avatar(organization) %>
     <%= organization.name %>
   </div>
