--- a/app/views/organizations/subscriptions/_features.html.erb
+++ b/app/views/organizations/subscriptions/_features.html.erb
@@ -1,4 +1,4 @@
-<%= render PageComponent.new(title: "Features", content_container: true) do %>
+<%= render PageComponent.new(title: t("organizations.subscriptions.features.title"), content_container: true) do %>
   <dl class="space-y-2">
     <% Rails.application.config_for(:settings)[:pro_features].map do |feature| %>
       <div>
