--- a/app/views/organizations/subscriptions/_plan.html.erb
+++ b/app/views/organizations/subscriptions/_plan.html.erb
@@ -3,18 +3,17 @@
     <dl class="space-y-2">
       <div class="flex justify-between">
         <dt class="font-semibold">
-          <%= t("users.show.plan.subscription_cancelled") %>
+          <%= t(".subscription_cancelled") %>
           <%= subscription_status_label(current_organization) %>
         </dt>
         <dd>
-          <%= number_to_currency plan_for(subscription)[:unit_amount] / 100, unit: currency_symbol(plan_for(subscription)[:currency]), strip_insignificant_zeros: true %>
-          /<%= plan_for(subscription)[:interval] %>
+          <%= number_to_currency plan_for(subscription)[:unit_amount] / 100, unit: currency_symbol(plan_for(subscription)[:currency]), strip_insignificant_zeros: true %>/<%= plan_for(subscription)[:interval] %>
         </dd>
       </div>
 
       <div class="flex justify-between">
         <dt class="font-semibold">
-          <%= t("users.show.plan.you_will_lose_access_on") %>:
+          <%= t(".you_will_lose_access_on") %>:
         </dt>
         <dd>
           <%= subscription.current_period_end.to_datetime.strftime("%d %b %Y") %>
@@ -22,25 +21,22 @@
       </div>
     </dl>
 
-    <div class="inline-flex">
-      <%= button_to t("users.show.plan.resume_subscription"), organization_subscriptions_billing_portal_path(current_organization), data: { turbo: "false" }, class: "btn btn-primary" %>
-    </div>
+    <%= button_to t(".resume_subscription"), organization_subscriptions_billing_portal_path(current_organization), data: { turbo: false }, class: "btn btn-primary" %>
   <% elsif subscription.active? %>
     <dl class="space-y-2">
       <div class="flex justify-between">
         <dt class="font-semibold">
-          <%= t("users.show.plan.subscription_active") %>
+          <%= t(".subscription_active") %>
           <%= subscription_status_label(current_organization) %>
         </dt>
         <dd>
-          <%= number_to_currency plan_for(subscription)[:unit_amount] / 100, unit: currency_symbol(plan_for(subscription)[:currency]), strip_insignificant_zeros: true %>
-          /<%= plan_for(subscription)[:interval] %>
+          <%= number_to_currency plan_for(subscription)[:unit_amount] / 100, unit: currency_symbol(plan_for(subscription)[:currency]), strip_insignificant_zeros: true %>/<%= plan_for(subscription)[:interval] %>
         </dd>
       </div>
 
       <div class="flex justify-between">
         <dt class="font-semibold">
-          <%= t("users.show.plan.next_billing_date") %>:
+          <%= t(".next_billing_date") %>:
         </dt>
         <dd>
           <%= subscription.current_period_end.to_datetime.strftime("%d %b %Y") %>
@@ -48,8 +44,6 @@
       </div>
     </dl>
 
-    <div class="inline-flex">
-      <%= button_to t("users.show.plan.manage_billing"), organization_subscriptions_billing_portal_path(current_organization), data: { turbo: false }, class: "btn btn-secondary" %>
-    </div>
+    <%= button_to t(".manage_billing"), organization_subscriptions_billing_portal_path(current_organization), data: { turbo: false }, class: "btn btn-secondary" %>
   <% end %>
 <% end %>
