--- a/app/views/organizations/subscriptions/_pricing.html.erb
+++ b/app/views/organizations/subscriptions/_pricing.html.erb
@@ -1,4 +1,4 @@
-<%= render PageComponent.new(title: "Pricing") do %>
+<%= render PageComponent.new(title: t(".title")) do %>
 	<div class="grid lg:grid-cols-2 gap-8">
 		<% Rails.application.config_for(:settings)[:plans].each do |plan| %>
 			<div class="shadow border rounded-xl text-center flex flex-col">
@@ -22,27 +22,23 @@
 					</div>
 
 					<div class="">
-						<% if user_signed_in? %>
-							<% if @organization.payment_processor.subscribed? %>
-								<% if plan_for(@organization.payment_processor.subscription)[:interval] == plan[:interval].to_s %>
-									<%= button_tag t(".current_plan"), class: "btn btn-secondary", disabled: true %>
-								<% else %>
-									<%= button_to organization_subscriptions_billing_portal_path(current_organization), data: { turbo: "false" }, class: "btn btn-secondary" do %>
-										<div>
-											<%= t("users.show.plan.manage_billing") %>
-										</div>
-									<% end %>
-								<% end %>
-
+						<% if @organization.payment_processor.subscribed? %>
+							<% if plan_for(@organization.payment_processor.subscription)[:interval] == plan[:interval].to_s %>
+								<%= button_tag t(".current_plan"), class: "btn btn-secondary", disabled: true %>
 							<% else %>
-								<%= link_to organization_subscriptions_checkout_path(current_organization, price_id: plan[:id]), data: { turbo: "false" }, class: "btn btn-primary" do %>
+								<%= button_to organization_subscriptions_billing_portal_path(current_organization), data: { turbo: false }, class: "btn btn-secondary" do %>
 									<div>
-										<%= t(".subscribe") %>
+										<%= t(".manage_billing") %>
 									</div>
 								<% end %>
 							<% end %>
+
 						<% else %>
-							<%= render AuthLinksComponent.new(provider: cookies[:provider], provider_image_url: cookies[:provider_image_url], provider_username: cookies[:provider_username]) %>
+							<%= link_to organization_subscriptions_checkout_path(current_organization, price_id: plan[:id]), data: { turbo: false }, class: "btn btn-primary" do %>
+								<div>
+									<%= t(".subscribe") %>
+								</div>
+							<% end %>
 						<% end %>
 					</div>
 				</div>
@@ -50,7 +46,7 @@
 		<% end %>
 	</div>
 
-	<div class="text-center text-slate-400">
+	<div class="text-center text-gray-400">
 		<%= t(".cancel_security") %>
 	</div>
 <% end %>
