--- a/app/views/organizations/subscriptions/_plan.html.erb
+++ b/app/views/organizations/subscriptions/_plan.html.erb
@@ -1,49 +1,28 @@
 <%= render PageComponent.new(title: t(".title"), content_container: true) do %>
-  <% if subscription.on_grace_period? %>
-    <dl class="space-y-2">
-      <div class="flex justify-between">
-        <dt class="font-semibold">
-          <%= t(".subscription_cancelled") %>
-          <%= subscription_status_label(current_organization) %>
-        </dt>
-        <dd>
-          <%= number_to_currency plan_for(subscription)[:unit_amount] / 100, unit: currency_symbol(plan_for(subscription)[:currency]), strip_insignificant_zeros: true %>/<%= plan_for(subscription)[:interval] %>
-        </dd>
-      </div>
+  <% status_label = subscription.on_grace_period? ? t(".subscription_cancelled") : t(".subscription_active") %>
+  <% access_ends_at_label = subscription.on_grace_period? ? t(".you_will_lose_access_on") : t(".next_billing_date") %>
+  <% button_label = subscription.on_grace_period? ? t(".resume_subscription") : t(".manage_billing") %>
 
-      <div class="flex justify-between">
-        <dt class="font-semibold">
-          <%= t(".you_will_lose_access_on") %>
-        </dt>
-        <dd>
-          <%= subscription.current_period_end.to_datetime.strftime("%d %b %Y") %>
-        </dd>
-      </div>
-    </dl>
+  <dl class="space-y-2">
+    <div class="flex justify-between">
+      <dt class="font-semibold">
+        <%= status_label %>
+        <%= subscription_status_label(current_organization) %>
+      </dt>
+      <dd>
+        <%= number_to_currency plan_for(subscription)[:unit_amount] / 100, unit: currency_symbol(plan_for(subscription)[:currency]), strip_insignificant_zeros: true %>/<%= plan_for(subscription)[:interval] %>
+      </dd>
+    </div>
 
-    <%= button_to t(".resume_subscription"), organization_subscriptions_billing_portal_path(current_organization), data: { turbo: false }, class: "btn btn-primary" %>
-  <% elsif subscription.active? %>
-    <dl class="space-y-2">
-      <div class="flex justify-between">
-        <dt class="font-semibold">
-          <%= t(".subscription_active") %>
-          <%= subscription_status_label(current_organization) %>
-        </dt>
-        <dd>
-          <%= number_to_currency plan_for(subscription)[:unit_amount] / 100, unit: currency_symbol(plan_for(subscription)[:currency]), strip_insignificant_zeros: true %>/<%= plan_for(subscription)[:interval] %>
-        </dd>
-      </div>
+    <div class="flex justify-between">
+      <dt class="font-semibold">
+        <%= access_ends_at_label %>
+      </dt>
+      <dd>
+        <%= subscription.current_period_end.to_datetime.strftime("%d %b %Y") %>
+      </dd>
+    </div>
+  </dl>
 
-      <div class="flex justify-between">
-        <dt class="font-semibold">
-          <%= t(".next_billing_date") %>
-        </dt>
-        <dd>
-          <%= subscription.current_period_end.to_datetime.strftime("%d %b %Y") %>
-        </dd>
-      </div>
-    </dl>
-
-    <%= button_to t(".manage_billing"), organization_subscriptions_billing_portal_path(current_organization), data: { turbo: false }, class: "btn btn-secondary" %>
-  <% end %>
+  <%= button_to button_label, organization_subscriptions_billing_portal_path(current_organization), data: { turbo: false }, class: "btn btn-primary" %>
 <% end %>
