--- a/app/views/organizations/subscriptions/_plan.html.erb
+++ b/app/views/organizations/subscriptions/_plan.html.erb
@@ -1,7 +1,11 @@
-<%= render PageComponent.new(title: t(".title"), content_container: true) do %>
-  <% status_label = subscription.on_grace_period? ? t(".subscription_cancelled") : t(".subscription_active") %>
-  <% access_ends_at_label = subscription.on_grace_period? ? t(".you_will_lose_access_on") : t(".next_billing_date") %>
-  <% button_label = subscription.on_grace_period? ? t(".resume_subscription") : t(".manage_billing") %>
+<% status_label = subscription.on_grace_period? ? t(".subscription_cancelled") : t(".subscription_active") %>
+<% access_ends_at_label = subscription.on_grace_period? ? t(".you_will_lose_access_on") : t(".next_billing_date") %>
+<% button_label = subscription.on_grace_period? ? t(".resume_subscription") : t(".manage_billing") %>
+
+<%= render PageComponent.new(title: t(".title"), content_container: true) do |component| %>
+  <% component.with_action_list do %>
+    <%= button_to button_label, organization_subscriptions_billing_portal_path(current_organization), data: { turbo: false }, class: "btn btn-secondary" %>
+  <% end %>
 
   <dl class="space-y-2">
     <div class="flex justify-between">
@@ -23,6 +27,4 @@
       </dd>
     </div>
   </dl>
-
-  <%= button_to button_label, organization_subscriptions_billing_portal_path(current_organization), data: { turbo: false }, class: "btn btn-primary" %>
 <% end %>
