--- a/app/views/organizations/subscriptions/_pricing.html.erb
+++ b/app/views/organizations/subscriptions/_pricing.html.erb
@@ -23,6 +23,7 @@
 
 					<div class="">
 						<% if @organization.payment_processor.subscribed? %>
+							<%# this is currently not accessible, since /_pricing is rendered only if there is no subscription %>
 							<% if plan_for(@organization.payment_processor.subscription)[:interval] == plan[:interval].to_s %>
 								<%= button_tag t(".current_plan"), class: "btn btn-secondary", disabled: true %>
 							<% else %>
