distance_of_time_in_words

--- a/app/views/organizations/subscriptions/_plan.html.erb
+++ b/app/views/organizations/subscriptions/_plan.html.erb
@@ -1,5 +1,5 @@
 <% status_label = subscription.on_grace_period? ? t(".subscription_cancelled") : t(".subscription_active") %>
-<% access_ends_at_label = subscription.on_grace_period? ? t(".you_will_lose_access_on") : t(".next_billing_date") %>
+<% access_ends_at_label = subscription.on_grace_period? ? t(".you_will_lose_access_in", distance_of_time_in_words: distance_of_time_in_words(subscription.current_period_end, Time.current)) : t(".next_billing_date") %>
 <% button_label = subscription.on_grace_period? ? t(".resume_subscription") : t(".manage_billing") %>
 
 <%= render PageComponent.new(title: t(".title"), content_container: true) do |component| %>
@@ -9,7 +9,7 @@
 
   <dl class="space-y-2">
     <div class="flex justify-between">
-      <dt class="font-semibold">
+      <dt class="font-medium">
         <%= status_label %>
         <%= subscription_status_label(current_organization) %>
       </dt>
@@ -19,7 +19,7 @@
     </div>
 
     <div class="flex justify-between">
-      <dt class="font-semibold">
+      <dt class="font-medium">
         <%= access_ends_at_label %>
       </dt>
       <dd>
