--- a/app/views/organizations/subscriptions/_pricing.html.erb
+++ b/app/views/organizations/subscriptions/_pricing.html.erb
@@ -12,7 +12,7 @@
 
 				<div class="p-4 flex flex-row lg:flex-col gap-8 items-center justify-between">
 					<div class="inline-flex gap-0 items-baseline">
-						<span class="text-5xl font-semibold">
+						<span class="text-5xl font-medium">
 							<%= number_to_currency (plan[:unit_amount].to_f / 100), unit: currency_symbol(plan[:currency]), strip_insignificant_zeros: true %>
 						</span>
 
