--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -38,10 +38,12 @@
   </div>
 
   <% if current_organization %>
-    <div class="border-t border-gray-300 space-y-2 p-2">
-      <%= nav_link "Billing #{subscription_status_label(current_organization)}", organization_subscriptions_path(current_organization), icon: "svg/credit-card.svg" if Rails.application.credentials.dig(:stripe, :private_key).present? %>
-      <%= nav_link "Users", organization_memberships_path(current_organization), icon: "svg/user-group.svg" %>
-      <%= nav_link "Settings", organization_path(current_organization), icon: "svg/cog-6-tooth.svg", active: [ [ "organizations" ], [ "edit", "show" ] ] %>
+    <div class="border-t border-gray-300 gap-y-2 p-2">
+      <% if @current_membership.admin? %>
+        <%= nav_link "Billing #{subscription_status_label(current_organization)}", organization_subscriptions_path(current_organization), icon: "svg/credit-card.svg" if Rails.application.credentials.dig(:stripe, :private_key).present? %>
+        <%= nav_link "Users", organization_memberships_path(current_organization), icon: "svg/user-group.svg" %>
+        <%= nav_link "Settings", organization_path(current_organization), icon: "svg/cog-6-tooth.svg", active: [ [ "organizations" ], [ "edit", "show" ] ] %>
+      <% end %>
     </div>
   <% end %>
 </aside>
