--- a/app/views/static/pricing.html.erb
+++ b/app/views/static/pricing.html.erb
@@ -1,4 +1,1 @@
-<div>
-  <h1 class="font-bold text-lx lg:text-3xll">Static#pricing</h1>
-  <p>Find me in app/views/static/pricing.html.erb</p>
-</div>
+<%= render "organizations/subscriptions/pricing" %>
