--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <%= render "layouts/head" %>
   </head>
 
-  <body class="flex h-screen" data-controller="mobile-sidebar">
+  <body class="flex h-dvh" data-controller="mobile-sidebar">
     <%= render "shared/sidebar" if signed_in? %>
     <%#= render "shared/sidebar_2_cols" if signed_in? %>
 
