--- a/app/views/shared/_sidebar_2_cols.html.erb
+++ b/app/views/shared/_sidebar_2_cols.html.erb
@@ -1,10 +1,10 @@
-<aside class="hidden lg:flex flex-col justify-between bg-gray-200 max-h-screen overflow-y-auto">
+<aside class="hidden lg:flex flex-col justify-between max-h-screen overflow-y-auto">
   <%# Widescreen sidebar top %>
   <%# change the nav flex-col/flex-row %>
   <nav class="flex flex-row flex-grow">
-    <div class="flex flex-col max-h-screen overflow-y-auto p-2 space-y-4">
+    <div class="flex flex-col max-h-screen overflow-y-auto p-2 space-y-4 border-r">
       <%= link_to root_path, class: "flex items-center justify-center" do %>
-        <%= image_tag "logo.png", alt: "logo", class: "max-h-10 max-w-10" %>
+        <%= image_tag "logo.png", alt: "logo", class: "size-8" %>
       <% end %>
 
       <%= active_link_to organizations_path, active: :exclusive, class_active: "bg-gray-400", class: "aspect-square flex justify-center items-center text-sm rounded-md border-4 border-transparent hover:border-gray-400 hover:bg-gray-600" do %>
@@ -20,7 +20,7 @@
     </div>
 
     <% if current_organization %>
-      <div class="flex flex-col max-h-screen overflow-y-auto p-2 space-y-2 bg-gray-200">
+      <div class="flex flex-col max-h-screen overflow-y-auto p-2 space-y-2 border-r">
         <%= render "shared/sidebar_links" %>
       </div>
     <% end %>
