--- a/app/views/shared/_sidebar_2_cols.html.erb
+++ b/app/views/shared/_sidebar_2_cols.html.erb
@@ -4,7 +4,7 @@
 <aside data-mobile-sidebar-target="sidebar" class="fixed lg:relative border-r border-gray-300 bg-white h-dvh -translate-x-full lg:translate-x-0 transition-transform duration-300 z-50 flex flex-col overflow-y-auto">
   <%# Widescreen sidebar top %>
   <nav class="flex flex-row flex-grow divide-x">
-    <div class="flex flex-col max-h-screen overflow-y-auto p-2 space-y-4">
+    <div class="flex flex-col max-h-dvh overflow-y-auto p-2 space-y-4">
       <%= link_to root_path, class: "flex items-center justify-center" do %>
         <%= image_tag "logo.png", alt: "logo", class: "size-8" %>
       <% end %>
@@ -22,7 +22,7 @@
     </div>
 
     <% if current_organization %>
-      <div class="flex flex-col max-h-screen overflow-y-auto p-2 space-y-2">
+      <div class="flex flex-col max-h-dvh overflow-y-auto p-2 space-y-2">
         <%= render "shared/sidebar_links" %>
       </div>
     <% end %>
