--- a/app/views/shared/_sidebar_2_cols.html.erb
+++ b/app/views/shared/_sidebar_2_cols.html.erb
@@ -22,8 +22,17 @@
     </div>
 
     <% if current_organization %>
-      <div class="flex flex-col max-h-dvh overflow-y-auto p-2 space-y-2">
-        <%= render "shared/sidebar_links" %>
+      <div class="flex flex-col max-h-dvh overflow-y-auto space-y-2">
+        <div class="space-y-2 p-2">
+          <%= render "shared/sidebar_links" %>
+        </div>
+        <div class="border-t space-y-2 p-2">
+          <% if @current_membership.admin? %>
+            <%= nav_link "Billing #{subscription_status_label(current_organization)}", organization_subscriptions_path(current_organization), icon: "svg/credit-card.svg" if Rails.application.credentials.dig(:stripe, :private_key).present? %>
+            <%= nav_link "Users", organization_memberships_path(current_organization), icon: "svg/user-group.svg" %>
+            <%= nav_link "Settings", organization_path(current_organization), icon: "svg/cog-6-tooth.svg", active: [ [ "organizations" ], [ "edit", "show" ] ] %>
+          <% end %>
+        </div>
       </div>
     <% end %>
   </nav>
