--- a/app/views/shared/_sidebar_2_cols.html.erb
+++ b/app/views/shared/_sidebar_2_cols.html.erb
@@ -22,7 +22,7 @@
     </div>
 
     <% if current_organization %>
-      <div class="flex flex-col max-h-dvh overflow-y-auto space-y-2">
+      <div class="flex flex-col justify-between max-w-min max-h-dvh overflow-y-auto space-y-2">
         <div class="space-y-2 p-2">
           <%= render "shared/sidebar_links" %>
         </div>
