--- a/app/views/organizations/dashboard/index.html.erb
+++ b/app/views/organizations/dashboard/index.html.erb
@@ -1,2 +1,2 @@
-<%= render PageComponent.new(title: "Dashboard", full_width: true) do |component| %>
+<%= render PageComponent.new(title: "#{current_organization.name} Dashboard", full_width: true) do |component| %>
 <% end %>
