--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -1,4 +1,4 @@
-<%= render PageComponent.new(title: "Organizations / #{@organization.name}") do |component| %>
+<%= render PageComponent.new(title: "#{@organization.name} settings") do |component| %>
   <% component.with_action_list do %>
     <%= link_to "Edit", edit_organization_path(@organization), class: "btn btn-secondary" if policy(@organization).edit? %>
     <%= link_to "Transfer", organization_transfer_path(@organization), class: "btn btn-danger" if @organization.can_transfer?(current_user) %>
