--- a/app/views/shared/_sidebar_2_cols.html.erb
+++ b/app/views/shared/_sidebar_2_cols.html.erb
@@ -1,10 +1,12 @@
-<aside class="hidden lg:flex flex-col justify-between bg-gray-200 max-h-screen overflow-y-auto">
+<%# Mobile sidebar backdrop %>
+<div data-mobile-sidebar-target="backdrop" class="lg:hidden fixed inset-0 bg-gray-800/50 z-40 hidden" data-action="click->mobile-sidebar#close"></div>
+
+<aside data-mobile-sidebar-target="sidebar" class="fixed lg:relative border-r bg-white h-dvh -translate-x-full lg:translate-x-0 transition-transform duration-300 z-50 flex flex-col overflow-y-auto">
   <%# Widescreen sidebar top %>
-  <%# change the nav flex-col/flex-row %>
-  <nav class="flex flex-row flex-grow">
-    <div class="flex flex-col max-h-screen overflow-y-auto p-2 space-y-4">
+  <nav class="flex flex-row flex-grow divide-x">
+    <div class="flex flex-col max-h-dvh overflow-y-auto p-2 space-y-4">
       <%= link_to root_path, class: "flex items-center justify-center" do %>
-        <%= image_tag "logo.png", alt: "logo", class: "max-h-10 max-w-10" %>
+        <%= image_tag "logo.png", alt: "logo", class: "size-8" %>
       <% end %>
 
       <%= active_link_to organizations_path, active: :exclusive, class_active: "bg-gray-400", class: "aspect-square flex justify-center items-center text-sm rounded-md border-4 border-transparent hover:border-gray-400 hover:bg-gray-600" do %>
@@ -20,14 +22,18 @@
     </div>
 
     <% if current_organization %>
-      <div class="flex flex-col max-h-screen overflow-y-auto p-2 space-y-2 bg-gray-200">
-        <%= render "shared/sidebar_links" %>
+      <div class="flex flex-col justify-between max-w-min max-h-dvh overflow-y-auto space-y-2">
+        <div class="space-y-2 p-2">
+          <%= render "shared/sidebar_links" %>
+        </div>
+        <div class="border-t space-y-2 p-2">
+          <% if @current_membership.admin? %>
+            <%= nav_link "Users", organization_memberships_path(current_organization), icon: "svg/user-group.svg" %>
+            <%= nav_link "Billing #{subscription_status_label(current_organization)}", organization_subscriptions_path(current_organization), icon: "svg/credit-card.svg" if Rails.application.credentials.dig(:stripe, :private_key).present? %>
+            <%= nav_link "Settings", organization_path(current_organization), icon: "svg/cog-6-tooth.svg", active: [ [ "organizations" ], [ "edit", "show" ] ] %>
+          <% end %>
+        </div>
       </div>
     <% end %>
   </nav>
-
-  <%# New section at the bottom %>
-  <div class="sticky bottom-0 bg-gray-500 text-white hidden">
-    <p>Bottom Content</p>
-  </div>
 </aside>
