replace inbox with project as mock model

--- a/app/views/organizations/projects/_form.html.erb
+++ b/app/views/organizations/projects/_form.html.erb
@@ -1,10 +1,10 @@
-<%= form_with(model: [ @organization, inbox ], class: "contents") do |form| %>
-  <% if inbox.errors.any? %>
+<%= form_with(model: [ @organization, project ], class: "contents") do |form| %>
+  <% if project.errors.any? %>
     <div id="error_explanation" class="bg-red-50 text-red-500 px-3 py-2 font-medium rounded-lg mt-3">
-      <h2><%= pluralize(inbox.errors.count, "error") %> prohibited this inbox from being saved:</h2>
+      <h2><%= pluralize(project.errors.count, "error") %> prohibited this project from being saved:</h2>
 
       <ul>
-        <% inbox.errors.each do |error| %>
+        <% project.errors.each do |error| %>
           <li><%= error.full_message %></li>
         <% end %>
       </ul>
