--- a/app/views/organizations/projects/_project.html.erb
+++ b/app/views/organizations/projects/_project.html.erb
@@ -1,12 +1,12 @@
-<div id="<%= dom_id inbox %>">
+<div id="<%= dom_id project %>">
   <p class="">
     <strong class="block font-medium mb-1">Name:</strong>
-    <%= inbox.name %>
+    <%= project.name %>
   </p>
 
   <p class="">
     <strong class="block font-medium mb-1">Organization:</strong>
-    <%= inbox.organization_id %>
+    <%= project.organization_id %>
   </p>
 
 </div>
