--- a/app/views/shared/_footer_nav.html.erb
+++ b/app/views/shared/_footer_nav.html.erb
@@ -7,10 +7,10 @@
       </div>
     <% end %>
 
-    <%= active_link_to organization_inboxes_path(@organization), class_active: "!text-indigo-600", class: "flex flex-col items-center text-gray-600 hover:text-indigo-600 transition-colors duration-200 gap-1" do %>
+    <%= active_link_to organization_projects_path(@organization), class_active: "!text-indigo-600", class: "flex flex-col items-center text-gray-600 hover:text-indigo-600 transition-colors duration-200 gap-1" do %>
       <%= inline_svg_tag "svg/question-mark-circle.svg", class: "size-6" %>
       <div class="text-xs font-medium">
-        Inboxes
+        Projects
       </div>
     <% end %>
   <% else %>
