--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -2,7 +2,7 @@
 
 <%= render PageComponent.new(title: "Organizations") do |component| %>
   <% component.with_action_list do %>
-    <%= link_to "New organization", new_organization_path, class: "btn btn-primary" %>
+    <%= link_to "New", new_organization_path, class: "btn btn-primary" %>
   <% end %>
 
   <div id="organizations" class="space-y-4">
