--- a/app/views/shared/_sidebar_2_cols.html.erb
+++ b/app/views/shared/_sidebar_2_cols.html.erb
@@ -4,20 +4,25 @@
 <aside data-mobile-sidebar-target="sidebar" class="fixed lg:relative border-r bg-white h-dvh -translate-x-full lg:translate-x-0 transition-transform duration-300 z-50 flex flex-col overflow-y-auto">
   <%# Widescreen sidebar top %>
   <nav class="flex flex-row flex-grow divide-x">
-    <div class="flex flex-col max-h-dvh overflow-y-auto p-2 space-y-4">
-      <%= link_to root_path, class: "flex items-center justify-center" do %>
-        <%= image_tag "logo.png", alt: "logo", class: "size-8" %>
-      <% end %>
-
-      <%= active_link_to organizations_path, active: :exclusive, class_active: "bg-gray-200", class: "aspect-square flex justify-center items-center text-sm rounded-md border-4 border-transparent hover:border-gray-200 hover:bg-gray-200" do %>
-        <%= inline_svg_tag "svg/rocket-launch.svg", class: "size-6" %>
-      <% end %>
-      <div class="flex flex-col items-center space-y-2">
-        <% current_user.organizations.each do |organization| %>
-          <%= active_link_to organization_path(organization, redirect_to: organization_dashboard_path(organization)), class_active: "bg-gray-200", class: "flex items-center space-x-2 text-sm rounded-md border-4 border-transparent hover:border-gray-200 hover:bg-gray-200" do %>
-            <%= organization_avatar(organization) %>
-          <% end %>
+    <div class="flex flex-col max-h-dvh overflow-y-auto p-2">
+      <div class="flex flex-col space-y-4">
+        <%= link_to root_path, class: "flex items-center justify-center" do %>
+          <%= image_tag "logo.png", alt: "logo", class: "size-8" %>
         <% end %>
+
+        <%= active_link_to organizations_path, active: :exclusive, class_active: "bg-gray-200", class: "aspect-square flex justify-center items-center text-sm rounded-md border-4 border-transparent hover:border-gray-200 hover:bg-gray-200" do %>
+          <%= inline_svg_tag "svg/rocket-launch.svg", class: "size-6" %>
+        <% end %>
+        <div class="flex flex-col items-center space-y-2">
+          <% current_user.organizations.each do |organization| %>
+            <%= active_link_to organization_path(organization, redirect_to: organization_dashboard_path(organization)), class_active: "bg-gray-200", class: "flex items-center space-x-2 text-sm rounded-md border-4 border-transparent hover:border-gray-200 hover:bg-gray-200" do %>
+              <%= organization_avatar(organization) %>
+            <% end %>
+          <% end %>
+        </div>
+      </div>
+      <div class="mt-auto pt-4">
+        <%= render "shared/sidebar_toggle" %>
       </div>
     </div>
 
