--- a/app/views/shared/_sidebar_toggle.html.erb
+++ b/app/views/shared/_sidebar_toggle.html.erb
@@ -1,7 +1,9 @@
-<button data-action="layout-switcher#toggleLayout" class="btn btn-transparent btn-sm">
+<button data-action="layout-switcher#toggleLayout" class="btn btn-transparent btn-sm" aria-label="Toggle sidebar layout">
 	<% if cookies[:sidebar_layout] == "two_column" %>
+		<span class="sr-only">Switch to one column layout</span>
 		<%= inline_svg_tag "svg/ellipsis-vertical.svg", class: "size-4" %>
 	<% else %>
+		<span class="sr-only">Switch to two column layout</span>
 		<%= inline_svg_tag "svg/grip-vertical.svg", class: "size-4" %>
 	<% end %>
 </button>
