--- a/lib/templates/pundit/policy/policy.rb.tt
+++ b/lib/templates/pundit/policy/policy.rb.tt
@@ -8,8 +8,16 @@ class <%= class_name %>Policy < Organization::BasePolicy
   #   membership.admin?
   # end
 
+  # def new?
+  #   create?
+  # end
+
   # def create?
   #   membership.admin?
+  # end
+
+  # def edit?
+  #   update?
   # end
 
   # def update?
