--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
-<nav class="flex justify-between px-4 py-2 bg-white">
+<nav class="flex justify-between px-4 py-2 bg-white dark:bg-gray-800 border-b dark:border-gray-700">
   <div class="flex items-center gap-2">
     <% if signed_in? %>
-      <button data-action="click->mobile-sidebar#open" class="lg:hidden cursor-pointer inline-flex items-center gap-2">
+      <button data-action="click->mobile-sidebar#open" class="lg:hidden cursor-pointer inline-flex items-center gap-2 text-gray-900 dark:text-gray-100">
         <%= inline_svg_tag "svg/bars-3.svg", class: "size-6" %>
         <% if current_organization %>
           <div class="inline-flex items-center gap-2 no-underline">
@@ -18,7 +18,7 @@
       <%= link_to root_path, class: "no-underline" do %>
         <%= image_tag "logo.png", class: "size-8" %>
       <% end %>
-      <%= active_link_to "Pricing", pricing_path, class_active: "bg-gray-200", class: "btn btn-transparent" %>
+      <%= active_link_to "Pricing", pricing_path, class_active: "bg-gray-200 dark:bg-gray-700", class: "btn btn-transparent" %>
     <% end %>
   </div>
 
@@ -26,18 +26,18 @@
   <div class="flex items-center gap-2">
     <% if signed_in? %>
       <details class="relative group" data-controller="dropdown" data-action="keydown.esc@window->dropdown#close">
-        <summary class="inline-flex items-center gap-1 font-medium text-sm cursor-pointer [&::-webkit-details-marker]:hidden">
+        <summary class="inline-flex items-center gap-1 font-medium text-sm cursor-pointer text-gray-900 dark:text-gray-100 [&::-webkit-details-marker]:hidden">
           <%= current_user.email %>
           <%= inline_svg_tag "svg/chevron-down.svg", class: "w-4 h-4 stroke-2 transition-transform duration-200 group-open:rotate-180" %>
         </summary>
-        <div class="absolute right-0 mt-1 bg-white border rounded-lg p-1 space-y-1">
-          <%= active_link_to "Edit Profile", edit_user_registration_path, class_active: "bg-gray-200", class: "btn btn-transparent block w-full text-left" %>
+        <div class="absolute right-0 mt-1 bg-white dark:bg-gray-800 border dark:border-gray-700 rounded-lg p-1 space-y-1">
+          <%= active_link_to "Edit Profile", edit_user_registration_path, class_active: "bg-gray-200 dark:bg-gray-700", class: "btn btn-transparent block w-full text-left" %>
           <%= button_to "Log out", destroy_user_session_path, method: :delete, data: { turbo_confirm: "Are you sure?" }, class: "btn btn-transparent block w-full text-left" %>
         </div>
       </details>
     <% else %>
-      <%= active_link_to "Log in", new_user_session_path, class_active: "bg-gray-200", class: "btn btn-transparent" %>
-      <%= active_link_to "Register", new_user_registration_path, class_active: "bg-gray-200", class: "btn btn-transparent" %>
+      <%= active_link_to "Log in", new_user_session_path, class_active: "bg-gray-200 dark:bg-gray-700", class: "btn btn-transparent" %>
+      <%= active_link_to "Register", new_user_registration_path, class_active: "bg-gray-200 dark:bg-gray-700", class: "btn btn-transparent" %>
     <% end %>
   </div>
 </nav>
