--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -2,27 +2,27 @@
 <div data-mobile-sidebar-target="backdrop" class="lg:hidden fixed inset-0 bg-gray-800/50 z-40 hidden" data-action="click->mobile-sidebar#close"></div>
 
 <%# Sidebar content %>
-<aside data-mobile-sidebar-target="sidebar" class="fixed lg:relative border-r w-52 bg-white h-dvh -translate-x-full lg:translate-x-0 transition-transform duration-300 z-50 flex flex-col overflow-y-auto">
+<aside data-mobile-sidebar-target="sidebar" class="fixed lg:relative border-r dark:border-gray-700 w-52 bg-white dark:bg-gray-800 h-dvh -translate-x-full lg:translate-x-0 transition-transform duration-300 z-50 flex flex-col overflow-y-auto">
   <div class="flex-1">
     <details class="group">
-      <summary class="btn-transparent font-medium text-sm p-2 cursor-pointer [&::-webkit-details-marker]:hidden flex items-center justify-between group-open:bg-gray-100">
+      <summary class="btn-transparent font-medium text-sm p-2 cursor-pointer [&::-webkit-details-marker]:hidden flex items-center justify-between group-open:bg-gray-100 dark:group-open:bg-gray-700">
         <% if current_organization %>
         <div class="inline-flex items-center gap-2 max-w-40">
           <div>
             <%= organization_avatar(current_organization) %>
           </div>
-          <div class="truncate">
+          <div class="truncate text-gray-900 dark:text-gray-100">
             <%= current_organization.name %>
           </div>
         </div>
         <% else %>
-          <div class="py-1 inline-flex">
+          <div class="py-1 inline-flex text-gray-900 dark:text-gray-100">
             Select Organization
           </div>
         <% end %>
         <%= inline_svg_tag "svg/chevron-up-down.svg", class: "w-4 h-4 stroke-2 transition-transform duration-200" %>
       </summary>
-      <div class="space-y-2 p-2 border-b">
+      <div class="space-y-2 p-2 border-b dark:border-gray-700">
         <% current_user.organizations.excluding(current_organization).each do |organization| %>
           <%= nav_link organization.name, organization_dashboard_path(organization), icon: organization_avatar(organization) %>
         <% end %>
@@ -37,7 +37,7 @@
     <% end %>
   </div>
 
-  <div class="border-t space-y-2 p-2">
+  <div class="border-t dark:border-gray-700 space-y-2 p-2">
     <% if current_organization %>
       <%= nav_link "Users", organization_memberships_path(current_organization), icon: "svg/user-group.svg" %>
       <% if @current_membership.admin? %>
