--- a/app/views/shared/_sidebar_2_cols.html.erb
+++ b/app/views/shared/_sidebar_2_cols.html.erb
@@ -1,21 +1,21 @@
 <%# Mobile sidebar backdrop %>
 <div data-mobile-sidebar-target="backdrop" class="lg:hidden fixed inset-0 bg-gray-800/50 z-40 hidden" data-action="click->mobile-sidebar#close"></div>
 
-<aside data-mobile-sidebar-target="sidebar" class="fixed lg:relative border-r bg-white h-dvh -translate-x-full lg:translate-x-0 transition-transform duration-300 z-50 flex flex-col overflow-y-auto">
+<aside data-mobile-sidebar-target="sidebar" class="fixed lg:relative border-r dark:border-gray-700 bg-white dark:bg-gray-800 h-dvh -translate-x-full lg:translate-x-0 transition-transform duration-300 z-50 flex flex-col overflow-y-auto">
   <%# Widescreen sidebar top %>
-  <nav class="flex flex-row flex-grow divide-x">
+  <nav class="flex flex-row flex-grow divide-x dark:divide-gray-700">
     <div class="flex flex-col max-h-dvh overflow-y-auto p-2">
       <div class="flex flex-col space-y-4">
         <%= link_to root_path, class: "flex items-center justify-center" do %>
           <%= image_tag "logo.png", alt: "logo", class: "size-8" %>
         <% end %>
 
-        <%= active_link_to organizations_path, active: :exclusive, class_active: "bg-gray-200", class: "aspect-square flex justify-center items-center text-sm rounded-md border-4 border-transparent hover:border-gray-200 hover:bg-gray-200" do %>
+        <%= active_link_to organizations_path, active: :exclusive, class_active: "bg-gray-200 dark:bg-gray-700", class: "aspect-square flex justify-center items-center text-sm rounded-md border-4 border-transparent hover:border-gray-200 dark:hover:border-gray-700 hover:bg-gray-200 dark:hover:bg-gray-700" do %>
           <%= inline_svg_tag "svg/rocket-launch.svg", class: "size-6" %>
         <% end %>
         <div class="flex flex-col items-center space-y-2">
           <% current_user.organizations.each do |organization| %>
-            <%= active_link_to organization_path(organization, redirect_to: organization_dashboard_path(organization)), class_active: "bg-gray-200", class: "flex items-center space-x-2 text-sm rounded-md border-4 border-transparent hover:border-gray-200 hover:bg-gray-200" do %>
+            <%= active_link_to organization_path(organization, redirect_to: organization_dashboard_path(organization)), class_active: "bg-gray-200 dark:bg-gray-700", class: "flex items-center space-x-2 text-sm rounded-md border-4 border-transparent hover:border-gray-200 dark:hover:border-gray-700 hover:bg-gray-200 dark:hover:bg-gray-700" do %>
               <%= organization_avatar(organization) %>
             <% end %>
           <% end %>
@@ -31,7 +31,7 @@
         <div class="space-y-2 p-2">
           <%= render "shared/sidebar_links" %>
         </div>
-        <div class="border-t space-y-2 p-2">
+        <div class="border-t dark:border-gray-700 space-y-2 p-2">
           <%= nav_link "Users", organization_memberships_path(current_organization), icon: "svg/user-group.svg" %>
           <% if @current_membership.admin? %>
             <%= nav_link "Billing #{subscription_status_label(current_organization)}", organization_subscriptions_path(current_organization), icon: "svg/credit-card.svg" if Rails.application.credentials.dig(:stripe, :private_key).present? %>
