add animated number

--- a/app/views/organizations/refills/index.html.erb
+++ b/app/views/organizations/refills/index.html.erb
@@ -32,7 +32,9 @@
 
 <%= render PageComponent.new(title: "Top up") do |component| %>
   <% component.with_action_list do %>
-    Balance: <%= current_organization.credits %>
+    <div class="text-lg font-semibold text-gray-900">
+      Balance: <span data-controller="animated-number" data-animated-number-start-value="0" data-animated-number-end-value="<%= current_organization.credits %>" data-animated-number-duration-value="300"><%= current_organization.credits %></span>
+    </div>
   <% end %>
 
   <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
